// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level component should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                file.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip0"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    file.name.tooltip
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField is-disabled emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-115"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-116"
                  disabled=""
                  id="TextField1"
                  readonly=""
                  type="text"
                  value="kitchen.dwg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                level.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip6"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.level.name
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-125"
              >
                <input
                  aria-invalid="false"
                  aria-label="level.name.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField7"
                  type="text"
                  value="Kitchen"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                ordinal
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip12"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.ordinal
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-125"
              >
                <input
                  aria-invalid="false"
                  aria-label="ordinal.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField13"
                  type="text"
                  value="5"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-22"
              >
                vertical.extent
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip18"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.vertical.extent
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription20"
                  aria-invalid="true"
                  aria-label="vertical.extent.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField19"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription20"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              file.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip0"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  file.name.tooltip
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField is-disabled emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-115"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-116"
                disabled=""
                id="TextField1"
                readonly=""
                type="text"
                value="kitchen.dwg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              level.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip6"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.level.name
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-125"
            >
              <input
                aria-invalid="false"
                aria-label="level.name.of.file"
                class="ms-TextField-field field-126"
                id="TextField7"
                type="text"
                value="Kitchen"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              ordinal
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip12"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.ordinal
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-125"
            >
              <input
                aria-invalid="false"
                aria-label="ordinal.of.file"
                class="ms-TextField-field field-126"
                id="TextField13"
                type="text"
                value="5"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-22"
            >
              vertical.extent
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip18"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.vertical.extent
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription20"
                aria-invalid="true"
                aria-label="vertical.extent.of.file"
                class="ms-TextField-field field-126"
                id="TextField19"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription20"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Level component should show error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                file.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip24"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    file.name.tooltip
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField is-disabled emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-115"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-116"
                  disabled=""
                  id="TextField25"
                  readonly=""
                  type="text"
                  value="kitchen.dwg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                level.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip30"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.level.name
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription32"
                  aria-invalid="true"
                  aria-label="level.name.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField31"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription32"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                ordinal
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip36"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.ordinal
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription38"
                  aria-invalid="true"
                  aria-label="ordinal.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField37"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription38"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-22"
              >
                vertical.extent
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip42"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.vertical.extent
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription44"
                  aria-invalid="true"
                  aria-label="vertical.extent.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField43"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription44"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              file.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip24"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  file.name.tooltip
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField is-disabled emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-115"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-116"
                disabled=""
                id="TextField25"
                readonly=""
                type="text"
                value="kitchen.dwg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              level.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip30"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.level.name
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription32"
                aria-invalid="true"
                aria-label="level.name.of.file"
                class="ms-TextField-field field-126"
                id="TextField31"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription32"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              ordinal
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip36"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.ordinal
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription38"
                aria-invalid="true"
                aria-label="ordinal.of.file"
                class="ms-TextField-field field-126"
                id="TextField37"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription38"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-22"
            >
              vertical.extent
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip42"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.vertical.extent
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription44"
                aria-invalid="true"
                aria-label="vertical.extent.of.file"
                class="ms-TextField-field field-126"
                id="TextField43"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription44"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Level component should show error message when level name contains invalid chars 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                file.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip120"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    file.name.tooltip
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField is-disabled emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-115"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-116"
                  disabled=""
                  id="TextField121"
                  readonly=""
                  type="text"
                  value="filename"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                level.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip126"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.level.name
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription128"
                  aria-invalid="true"
                  aria-label="level.name.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField127"
                  type="text"
                  value="asdfjhclsadfhbcalskjdfhcblksdfhcbalksdfhjcbalskdfjhcbalskdfhcblaskfdjhcblaskfjhcbalskfhjcbalskfhjcblaskjfhcbasdlfkhjcb"
                />
              </div>
            </div>
            <span
              id="TextFieldDescription128"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                ordinal
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip132"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.ordinal
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription134"
                  aria-invalid="true"
                  aria-label="ordinal.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField133"
                  type="text"
                  value="5"
                />
              </div>
            </div>
            <span
              id="TextFieldDescription134"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-22"
              >
                vertical.extent
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip138"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.vertical.extent
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription140"
                  aria-invalid="true"
                  aria-label="vertical.extent.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField139"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription140"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              file.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip120"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  file.name.tooltip
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField is-disabled emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-115"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-116"
                disabled=""
                id="TextField121"
                readonly=""
                type="text"
                value="filename"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              level.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip126"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.level.name
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription128"
                aria-invalid="true"
                aria-label="level.name.of.file"
                class="ms-TextField-field field-126"
                id="TextField127"
                type="text"
                value="asdfjhclsadfhbcalskjdfhcblksdfhcbalksdfhjcbalskdfjhcbalskdfhcblaskfdjhcblaskfjhcbalskfhjcbalskfhjcblaskjfhcbasdlfkhjcb"
              />
            </div>
          </div>
          <span
            id="TextFieldDescription128"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              ordinal
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip132"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.ordinal
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription134"
                aria-invalid="true"
                aria-label="ordinal.of.file"
                class="ms-TextField-field field-126"
                id="TextField133"
                type="text"
                value="5"
              />
            </div>
          </div>
          <span
            id="TextFieldDescription134"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-22"
            >
              vertical.extent
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip138"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.vertical.extent
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription140"
                aria-invalid="true"
                aria-label="vertical.extent.of.file"
                class="ms-TextField-field field-126"
                id="TextField139"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription140"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Level component should show error message when ordinal is not unique 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                file.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip96"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    file.name.tooltip
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField is-disabled emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-115"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-116"
                  disabled=""
                  id="TextField97"
                  readonly=""
                  type="text"
                  value="kitchen.dwg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                level.name
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip102"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.level.name
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-125"
              >
                <input
                  aria-invalid="false"
                  aria-label="level.name.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField103"
                  type="text"
                  value="Kitchen"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-4"
              >
                ordinal
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip108"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.ordinal
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription110"
                  aria-invalid="true"
                  aria-label="ordinal.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField109"
                  type="text"
                  value="5"
                />
              </div>
            </div>
            <span
              id="TextFieldDescription110"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
        <div
          class="emotion-1"
        >
          <div
            class="emotion-2"
          >
            <div
              class="emotion-3"
            >
              <div
                class="emotion-22"
              >
                vertical.extent
              </div>
              <span
                class="emotion-5"
              >
                <div
                  class="ms-TooltipHost root-109"
                  role="none"
                >
                  <i
                    aria-label="Tooltip"
                    class="root-112"
                    data-icon-name="Info"
                    role="img"
                  >
                    
                  </i>
                  <div
                    hidden=""
                    id="tooltip114"
                    style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                  >
                    tooltip.vertical.extent
                  </div>
                </div>
              </span>
            </div>
          </div>
          <div
            class="ms-TextField emotion-6 root-114"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-130"
              >
                <input
                  aria-describedby="TextFieldDescription116"
                  aria-invalid="true"
                  aria-label="vertical.extent.of.file"
                  class="ms-TextField-field field-126"
                  id="TextField115"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription116"
            >
              <div
                role="alert"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  border-bottom: 1px solid #ccc;
  margin-bottom: 1rem;
}

.emotion-0:last-child {
  border-bottom: none;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 1rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  width: 15.625rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 0.813rem;
}

.emotion-4 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4:after {
  content: ' *';
  color: #A4262C;
  white-space: pre;
}

.emotion-5 {
  cursor: pointer;
  margin-left: 5px;
  margin-top: 3px;
}

.emotion-6 {
  width: 100%;
}

.emotion-22 {
  height: 1.5rem;
  line-height: 1.5rem;
  max-width: 15rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              file.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip96"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  file.name.tooltip
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField is-disabled emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-115"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-116"
                disabled=""
                id="TextField97"
                readonly=""
                type="text"
                value="kitchen.dwg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              level.name
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip102"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.level.name
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-125"
            >
              <input
                aria-invalid="false"
                aria-label="level.name.of.file"
                class="ms-TextField-field field-126"
                id="TextField103"
                type="text"
                value="Kitchen"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              ordinal
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip108"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.ordinal
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription110"
                aria-invalid="true"
                aria-label="ordinal.of.file"
                class="ms-TextField-field field-126"
                id="TextField109"
                type="text"
                value="5"
              />
            </div>
          </div>
          <span
            id="TextFieldDescription110"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-3"
          >
            <div
              class="emotion-22"
            >
              vertical.extent
            </div>
            <span
              class="emotion-5"
            >
              <div
                class="ms-TooltipHost root-109"
                role="none"
              >
                <i
                  aria-label="Tooltip"
                  class="root-112"
                  data-icon-name="Info"
                  role="img"
                >
                  
                </i>
                <div
                  hidden=""
                  id="tooltip114"
                  style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
                >
                  tooltip.vertical.extent
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="ms-TextField emotion-6 root-114"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-130"
            >
              <input
                aria-describedby="TextFieldDescription116"
                aria-invalid="true"
                aria-label="vertical.extent.of.file"
                class="ms-TextField-field field-126"
                id="TextField115"
                type="text"
                value=""
              />
            </div>
          </div>
          <span
            id="TextFieldDescription116"
          >
            <div
              role="alert"
            />
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
